Disse filene skulle vært inne for en måned siden
Jeg aner ikke hva som har skjedd, filene ble ikke commited, og jeg har
ikke tenkt noe mer over det

--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" type="text/css" href="lab4.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	
-<!-- Jquery biblotek gjøres synlig her -->
-<!-- <script src="jquery.scrollto-1.4.7.js"></script> -->
-<script type="text/javascript"> // her implementeres den dynamiske koden //markere valg og rulle den til selektert valg etter ID
+
+<script type="text/javascript">
+
 	$(function() {
 		$( ".firstUL li" ).each(function() {
 			$( this ).click(function() {
